# transactapi-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs
src/endpoints/: get_offering.rs  get_trade.rs  get_trade_status.rs  mod.rs  validate_aba_routing_number.rs
